62-php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-backend
  namespace: dct-app
spec:
  type: ClusterIP
  selector:
    app: php-backend
  ports:
    - name: http
      port: 80
      targetPort: 80   # we switched to php:8.2-apache earlier (port 80)
